cleanup: corrects the styling for all three hero components and removes extra spacing

--- a/src/Utils/Hero/Hero.scss
+++ b/src/Utils/Hero/Hero.scss
@@ -6,12 +6,11 @@
   display: flex;
   width: 100%;
   min-width: 100%;
-  height: 100vh;
+  height: calc(100vh + 100px);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  padding-top: 150px;
 
   //Core classes
   .hero-header,
@@ -19,17 +18,9 @@
   .hero-footer {
     z-index: 0;
   }
-  // Hero content
-  .hero-content {
-    
-  }
 
   .hero-footer {
-    padding-bottom: 90px;
-  }
-
-  .hero-media {
-    margin-bottom: 20px;
+    display: flex;
   }
 
   .hero-title {
@@ -47,7 +38,6 @@
     height: 50px;
     width: 50px;
     cursor: pointer;
-    margin-top: 30px;
 
     .hero-icon {
       font-size: 50px;
@@ -74,7 +64,7 @@
   &.center {
     flex-direction: column;
     text-align: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     .hero-header, .hero-content, .hero-footer {
       flex-direction: column;
@@ -83,6 +73,10 @@
     .hero-title, .hero-tagline, .hero-action {
       margin-left: auto;
       margin-right: auto;
+    }
+
+    .hero-action {
+      padding-top: 30px;
     }
   }
 
